--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string-array name="modem_switcher_entries">
-        <item>Auto</item>
+        <item>Current (Do nothing)</item>
         <item>Phone / 2G</item>
         <item>3G only</item>
     </string-array>
